# gamelibs-imgui

./: Makefile  imconfig.h  imgui.cpp  meson.build
backends/: imgui_impl_opengl3.cpp  imgui_impl_opengl3.h  imgui_impl_sdl2.cpp  imgui_impl_sdl3.cpp
msvc/: ImGui.vcxproj  ImGui.vcxproj.filters
